@startuml
class DonorControl {
    + DonorControl(context:DBContext)
    + Exists(id:string) : bool
    + <<async>> Create(donor:Donor) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> Update(id:string, donor:Donor) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:Donor) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + <<async>> Delete(donor:Donor) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
class "GenericRepositoryIn`1"<T> {
}
class "GenericRepositoryOut`1"<T> {
}
"IUserInterfaceCRUD`1" "<Donor>" <|-- DonorControl
DonorControl --> "DonorRepositoryIn<Donor>" "GenericRepositoryIn`1"
DonorControl --> "DonorRepositoryOut<Donor>" "GenericRepositoryOut`1"
DonorControl o-> "settings" JsonSerializerSettings
@enduml
